--- a/publication/index.html
+++ b/publication/index.html
@@ -53,29 +53,33 @@
         </div>
     </div>
 </nav><div id="content" class="container">
-
-<div class="row-fluid navmargin">
-    <div class="page-header">
-        <h1>About - Thu, Feb 28, 2019</h1>
-    </div>
-    <p class="lead">Hugo, the world’s fastest framework for building websites</p>
-    <p>Written in Go, Hugo is an open source static site generator available under the <a href="https://github.com/gohugoio/hugo/blob/master/LICENSE">Apache Licence 2.0.</a> Hugo supports TOML, YAML and JSON data file types, Markdown and HTML content files and uses shortcodes to add rich content. Other notable features are taxonomies, multilingual mode, image processing, custom output formats, HTML/CSS/JS minification and support for Sass SCSS workflows.</p>
-<p>Hugo makes use of a variety of open source projects including:</p>
+<article class="row-fluid navmargin">
+    <header class="page-header">
+        <h1>Publications</h1>
+    </header>
+    
+    
+</article>
 <ul>
-<li><a href="https://github.com/yuin/goldmark">https://github.com/yuin/goldmark</a></li>
-<li><a href="https://github.com/alecthomas/chroma">https://github.com/alecthomas/chroma</a></li>
-<li><a href="https://github.com/muesli/smartcrop">https://github.com/muesli/smartcrop</a></li>
-<li><a href="https://github.com/spf13/cobra">https://github.com/spf13/cobra</a></li>
-<li><a href="https://github.com/spf13/viper">https://github.com/spf13/viper</a></li>
+
+
+    <li>
+        <a href="https://ldbc.github.io/publication/dblp-confmodels-szarnyas-irhbv-14/">2014-01-01 | IncQuery-D: A Distributed Incremental Model Query Framework in the Cloud</a>
+    </li>
+
+    <li>
+        <a href="https://ldbc.github.io/publication/dblp-confstaf-izso-srv-14/">2014-01-01 | MONDO-SAM: A Framework to Systematically Assess MDE Scalability</a>
+    </li>
+
+    <li>
+        <a href="https://ldbc.github.io/publication/dblp-confstaf-szarnyas-sidhub-14/">2014-01-01 | Movie Database Case: An EMF-IncQuery Solution</a>
+    </li>
+
+    <li>
+        <a href="https://ldbc.github.io/publication/dblp-confstaf-izso-srv-13/">2013-01-01 | IncQuery-D: Incremental graph search in the cloud</a>
+    </li>
+
 </ul>
-<p>Hugo is ideal for blogs, corporate websites, creative portfolios, online magazines, single page applications or even a website with thousands of pages.</p>
-<p>Hugo is for people who want to hand code their own website without worrying about setting up complicated runtimes, dependencies and databases.</p>
-<p>Websites built with Hugo are extremelly fast, secure and can be deployed anywhere including, AWS, GitHub Pages, Heroku, Netlify and any other hosting provider.</p>
-<p>Learn more and contribute on <a href="https://github.com/gohugoio">GitHub</a>.</p>
-
-    <h4><a href="https://ldbc.github.io">Back to Home</a></h4>
-</div>
-
 
         </div><footer class="container">
     <hr class="soften">
