deploy: 49a8e4f6fbcf23ccc20ca1f9e522c842dbc18739

--- a/members/index.html
+++ b/members/index.html
@@ -279,19 +279,19 @@
       <h3 class="section-title">Steering Committee (<a href="mailto:info@ldbcouncil.org">info@ldbcouncil.org</a>):</h3>
         <div class="row row-eq-height"><div class="col-md-4 px-0 div-wrapper d-flex justify-content-center align-items-center">
           <a href="https://www.cwi.nl/people/peter-boncz" style="text-align: center;" >
-            <img src="https://ldbc.github.io/images/steering-committee-pictures/peter.jpeg" alt="Prof. Dr. Peter Boncz (chair)" loading="lazy" class="img-fluid" style="max-width: 80%; height: auto; vertical-align: middle; max-height:162px; max-width:350px; height:auto; width:auto; padding-bottom: 15px;" >
+            <img src="https://ldbc.github.io/images/steering-committee-pictures/peter-boncz.jpg" alt="Prof. Dr. Peter Boncz (chair)" loading="lazy" class="img-fluid" style="max-width: 80%; height: auto; vertical-align: middle; max-height:162px; max-width:350px; height:auto; width:auto; padding-bottom: 15px;" >
             <br/>
             Prof. Dr. Peter Boncz (chair)
           </a>
           </div><div class="col-md-4 px-0 div-wrapper d-flex justify-content-center align-items-center">
           <a href="https://www.linkedin.com/in/alastair-green-65a861a7/" style="text-align: center;" >
-            <img src="https://ldbc.github.io/images/steering-committee-pictures/photo_2.600x0.jpg" alt="Alastair Green (vice-chair)" loading="lazy" class="img-fluid" style="max-width: 80%; height: auto; vertical-align: middle; max-height:162px; max-width:350px; height:auto; width:auto; padding-bottom: 15px;" >
+            <img src="https://ldbc.github.io/images/steering-committee-pictures/alastair-green.jpg" alt="Alastair Green (vice-chair)" loading="lazy" class="img-fluid" style="max-width: 80%; height: auto; vertical-align: middle; max-height:162px; max-width:350px; height:auto; width:auto; padding-bottom: 15px;" >
             <br/>
             Alastair Green (vice-chair)
           </a>
           </div><div class="col-md-4 px-0 div-wrapper d-flex justify-content-center align-items-center">
           <a href="https://www.cwi.nl/people/gabor-szarnyas" style="text-align: center;" >
-            <img src="https://ldbc.github.io/images/steering-committee-pictures/szarnyasg-700.png" alt="Gábor Szárnyas" loading="lazy" class="img-fluid" style="max-width: 80%; height: auto; vertical-align: middle; max-height:162px; max-width:350px; height:auto; width:auto; padding-bottom: 15px;" >
+            <img src="https://ldbc.github.io/images/steering-committee-pictures/gabor-szarnyas.jpg" alt="Gábor Szárnyas" loading="lazy" class="img-fluid" style="max-width: 80%; height: auto; vertical-align: middle; max-height:162px; max-width:350px; height:auto; width:auto; padding-bottom: 15px;" >
             <br/>
             Gábor Szárnyas
           </a>
