deploy: 345b645672a1bf6191ecf7a5df157b943058d048

--- a/publication/dblp-confrweb-larriba-pey-md-14/index.html
+++ b/publication/dblp-confrweb-larriba-pey-md-14/index.html
@@ -181,15 +181,15 @@
 
 
   
-    Josep Lluís Larriba-Pey,
+    Josep Lluı́s Larriba-Pey,
   
-    Norbert Martínez-Bazan,
+    Norbert Martı́nez-Bazan,
   
 
 
   and
 
-David Domínguez-Sal.
+David Domı́nguez-Sal.
 
 </span>
 
