--- a/publication/dblp-confsigmod-martinez-bazan-d-14/index.html
+++ b/publication/dblp-confsigmod-martinez-bazan-d-14/index.html
@@ -181,13 +181,13 @@
 
 
   
-    Norbert Martínez-Bazan
+    Norbert Martı́nez-Bazan
   
 
 
   and
 
-David Domínguez-Sal.
+David Domı́nguez-Sal.
 
 </span>
 
