--- a/publication/index.html
+++ b/publication/index.html
@@ -447,9 +447,9 @@ Gábor Szárnyas.
   
     Moritz Kaufmann,
   
-    Josep-Lluís Larriba-Pey,
+    Josep-Lluı́s Larriba-Pey,
   
-    Norbert Martínez-Bazan,
+    Norbert Martı́nez-Bazan,
   
     József Marton,
   
@@ -478,7 +478,6 @@ Jack Waudby.
   </span>
   (2020).
   <a href="/publication/dblp-journalscorrabs-2001-02299/">The LDBC Social Network Benchmark</a>.
-  <em>CoRR</em>.
   
   <p>
 
@@ -603,7 +602,6 @@ Yinglong Xia.
   </span>
   (2020).
   <a href="/publication/dblp-journalscorrabs-2011-15028/">The LDBC Graphalytics Benchmark</a>.
-  <em>CoRR</em>.
   
   <p>
 
@@ -792,7 +790,6 @@ Gábor Szárnyas.
   </span>
   (2020).
   <a href="/publication/dblp-journalscorrabs-2010-12243/">An analysis of the SIGMOD 2014 Programming Contest: Complex queries on the LDBC social network graph</a>.
-  <em>CoRR</em>.
   
   <p>
 
@@ -1404,7 +1401,6 @@ Peter A. Boncz.
   </span>
   (2016).
   <a href="/publication/dblp-journalspvldb-iosup-hnhpmccsat-16/">LDBC Graphalytics: A Benchmark for Large-Scale Graph Analysis on Parallel and Distributed Platforms</a>.
-  <em>VLDB</em>.
   
   <p>
 
@@ -1796,7 +1792,6 @@ Paul Groth.
   </span>
   (2015).
   <a href="/publication/dblp-journalsws-loizou-ag-15/">On the formulation of performant SPARQL queries</a>.
-  <em>J. Web Semant.</em>.
   
   <p>
 
@@ -1965,13 +1960,13 @@ Peter A. Boncz.
 
 
   
-    Norbert Martínez-Bazan
+    Norbert Martı́nez-Bazan
   
 
 
   and
 
-David Domínguez-Sal.
+David Domı́nguez-Sal.
 
 </span>
 
@@ -2059,7 +2054,7 @@ David Domínguez-Sal.
   
     Peter A. Boncz,
   
-    Josep Lluís Larriba-Pey,
+    Josep Lluı́s Larriba-Pey,
   
     Irini Fundulaki,
   
@@ -2069,7 +2064,7 @@ David Domínguez-Sal.
   
     Peter Neubauer,
   
-    Norbert Martínez-Bazan,
+    Norbert Martı́nez-Bazan,
   
     Venelin Kotsev,
   
@@ -2086,7 +2081,6 @@ Ioan Toma.
   </span>
   (2014).
   <a href="/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/">The Linked Data Benchmark Council: A graph and RDF industry benchmarking effort</a>.
-  <em>SIGMOD Rec.</em>.
   
   <p>
 
@@ -2266,7 +2260,6 @@ Peter A. Boncz.
   </span>
   (2014).
   <a href="/publication/dblp-journalsercim-pham-b-14/">MonetDB/RDF: Discovering and Exploiting the Emergent Schema of RDF Data</a>.
-  <em>ERCIM News</em>.
   
   <p>
 
@@ -2344,15 +2337,15 @@ Peter A. Boncz.
 
 
   
-    Josep Lluís Larriba-Pey,
+    Josep Lluı́s Larriba-Pey,
   
-    Norbert Martínez-Bazan,
+    Norbert Martı́nez-Bazan,
   
 
 
   and
 
-David Domínguez-Sal.
+David Domı́nguez-Sal.
 
 </span>
 
@@ -2534,7 +2527,7 @@ Peter A. Boncz.
 
   and
 
-David Domínguez-Sal.
+David Domı́nguez-Sal.
 
 </span>
 
@@ -2626,7 +2619,7 @@ David Domínguez-Sal.
 
   and
 
-Josep Lluís Larriba-Pey.
+Josep Lluı́s Larriba-Pey.
 
 </span>
 
@@ -3002,7 +2995,6 @@ Peter A. Boncz.
   </span>
   (2014).
   <a href="/publication/dblp-journalsercim-angles-pb-14/">Benchmarking Linked Open Data Management Systems</a>.
-  <em>ERCIM News</em>.
   
   <p>
 
@@ -3279,7 +3271,7 @@ Alex Averbuch.
   
     Andrey Gubichev,
   
-    Josep Lluís Larriba-Pey,
+    Josep Lluı́s Larriba-Pey,
   
 
 
@@ -3294,7 +3286,6 @@ Thomas Neumann.
   </span>
   (2013).
   <a href="/publication/dblp-journalsdbsk-boncz-fgl-013/">The Linked Data Benchmark Council Project</a>.
-  <em>Datenbank-Spektrum</em>.
   
   <p>
 
@@ -3567,7 +3558,6 @@ Martin Neumann.
   </span>
   (2013).
   <a href="/publication/dblp-journalscorrabs-1301-5121/">Partitioning Graph Databases - A Quantitative Evaluation</a>.
-  <em>CoRR</em>.
   
   <p>
 
@@ -3760,7 +3750,7 @@ Aoying Zhou.
 
   and
 
-Josep Lluís Larriba-Pey.
+Josep Lluı́s Larriba-Pey.
 
 </span>
 
@@ -3955,7 +3945,6 @@ Orri Erling.
   </span>
   (2012).
   <a href="/publication/dblp-journalsdebu-erling-12/">Virtuoso, a Hybrid RDBMS/Graph Column Store</a>.
-  <em>IEEE Data Eng. Bull.</em>.
   
   <p>
 
