--- a/publication/dblp-journalscorrabs-2010-12243/index.html
+++ b/publication/dblp-journalscorrabs-2010-12243/index.html
@@ -245,7 +245,7 @@ Gábor Szárnyas.
 
 
 
-<a class="btn btn-outline-primary btn-sm" href="https://arxiv.org/abs/2010.12243" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm" href="https://arxiv.org/pdf/2010.12243.pdf" target="_blank" rel="noopener">
   
  PDF 
 </a>
