--- a/publication/dblp-journalscorrabs-2011-15028/index.html
+++ b/publication/dblp-journalscorrabs-2011-15028/index.html
@@ -275,7 +275,7 @@ Yinglong Xia.
 
 
 
-<a class="btn btn-outline-primary btn-sm" href="https://arxiv.org/abs/2011.15028" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm" href="https://arxiv.org/pdf/2011.15028.pdf" target="_blank" rel="noopener">
   
  PDF 
 </a>
