--- a/publication/index.html
+++ b/publication/index.html
@@ -508,7 +508,7 @@ Jack Waudby.
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="http://arxiv.org/abs/2001.02299" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm btn-sm" href="http://arxiv.org/pdf/2001.02299.pdf" target="_blank" rel="noopener">
   
  PDF 
 </a>
@@ -632,7 +632,7 @@ Yinglong Xia.
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="https://arxiv.org/abs/2011.15028" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm btn-sm" href="https://arxiv.org/pdf/2011.15028.pdf" target="_blank" rel="noopener">
   
  PDF 
 </a>
@@ -820,7 +820,7 @@ Gábor Szárnyas.
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="https://arxiv.org/abs/2010.12243" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm btn-sm" href="https://arxiv.org/pdf/2010.12243.pdf" target="_blank" rel="noopener">
   
  PDF 
 </a>
@@ -3588,7 +3588,7 @@ Martin Neumann.
 
 
 
-<a class="btn btn-outline-primary btn-sm btn-sm" href="http://arxiv.org/abs/1301.5121" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm btn-sm" href="http://arxiv.org/pdf/1301.5121.pdf" target="_blank" rel="noopener">
   
  PDF 
 </a>
