--- a/publication/dblp-journalscorrabs-2001-02299/index.html
+++ b/publication/dblp-journalscorrabs-2001-02299/index.html
@@ -275,7 +275,7 @@ Jack Waudby.
 
 
 
-<a class="btn btn-outline-primary btn-sm" href="http://arxiv.org/abs/2001.02299" target="_blank" rel="noopener">
+<a class="btn btn-outline-primary btn-sm" href="http://arxiv.org/pdf/2001.02299.pdf" target="_blank" rel="noopener">
   
  PDF 
 </a>
