deploy: 0443a52178b30a1f289cc4d6dd818610e4a3710f

--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-10" data-duration-in=".3" data-animation-in="fadeInRight" data-delay-in=".1">
-            <h1 class="mb-4" style="color:#fff">Welcome to LDBC Website</h1>
+            <h1 class="mb-4" style="color:#fff">Welcome to the LDBC Website</h1>
             <h4 class="mb-0 letter-spacing" style="color:#fff">On this website, you can find information on benchmark specifications and results, on how the LDBC organization works, the motivation for LDBC, and benchmarking resources for the graph and RDF developer community.</h4>
             <p class="mb-5"></p>
             
