deploy: c492d834e31ebfe690bccd8d12e8abf958b7bd59

--- a/index.html
+++ b/index.html
@@ -237,8 +237,8 @@
         <a href="https://ldbc.github.io/post/speeding-up-ldbc-snb-datagen/">
           <h4 class="mt-0">Speeding Up LDBC SNB Datagen</h4>
         </a>
-        24 Jun 2021
-        <p>LDBC&rsquo;s <a href="#snb">Social Network Benchmark</a> (LDBC SNB) is an industrial and
+        12 Jun 2020
+        <p>LDBC&rsquo;s <a href="#references">Social Network Benchmark [4]</a> (LDBC SNB) is an industrial and
 academic initiative, formed by principal actors in the field of
 graph-like data management. Its goal is to define a framework where …</p>
       </div>
