--- a/benchmarks/spb/index.html
+++ b/benchmarks/spb/index.html
@@ -162,15 +162,7 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>The Semantic Publishing Benchmark (SPB) is an LDBC benchmark for testing
-the performance of RDF engines inspired by the Media/Publishing
-industry. In particular, LDBC worked with British Broadcasting
-Corporation
-<a href="http://www.bbc.co.uk/blogs/internet/posts/Linked-Data-Connecting-together-the-BBCs-Online-Content">BBC</a>
-to define this benchmark, for which BBC donated
-workloads, <a href="https://github.com/ldbc/ldbc_spb_bm_2.0/tree/master/datasets_and_queries/ontologies">ontologies</a> and
-data. The publishing industry is an area where significant adoption
-of RDF is taking place.</p>
+          <p>The Semantic Publishing Benchmark (SPB) is an LDBC benchmark for testing the performance of RDF engines inspired by the Media/Publishing industry. In particular, LDBC worked with British Broadcasting Corporation <a href="http://www.bbc.co.uk/blogs/internet/posts/Linked-Data-Connecting-together-the-BBCs-Online-Content">BBC</a> to define this benchmark, for which BBC donated workloads, <a href="https://github.com/ldbc/ldbc_spb_bm_2.0/tree/master/datasets_and_queries/ontologies">ontologies</a> and data. The publishing industry is an area where significant adoption of RDF is taking place.</p>
 <p>There have been many academic benchmarks for RDF but none of these are
 truly industrial-grade. The SPB  combines a set of complex queries under
 inference with continuous updates and special failover tests for systems
@@ -184,10 +176,7 @@ operations that add new data, alter or delete existing (b) aggregation
 operations that retrieve content according to various criteria. The
 benchmark also tests conformance for various rules inside
 the OWL2-RL rule-set.</p>
-<p>The <a href="https://github.com/ldbc/ldbc_spb_bm_2.0/blob/master/doc/LDBC_SPB_v2.0.docx?raw=true">SPB specification</a> contains
-the description of the benchmark and the data generator and all
-information about its software components can be found on the
-<a href="http://ldbcouncil.org/developer/spb">SPB developer page</a>.</p>
+<p>The <a href="https://github.com/ldbc/ldbc_spb_bm_2.0/blob/master/doc/LDBC_SPB_v2.0.docx?raw=true">SPB specification</a> contains the description of the benchmark and the data generator and all information about its software components can be found on the <a href="http://ldbcouncil.org/developer/spb">SPB developer page</a>.</p>
 <h4 id="semantic-publishing-benchmark-spb-audited-results-for-scale-factors-sf1--64m-sf3---256m-and-sf5---1gtriples-are-shown-below">Semantic Publishing Benchmark (SPB) Audited Results for Scale Factors SF1 - 64M, SF3 - 256M and SF5 - 1G triples are shown below. </h4>
 <table>
 <thead>
