deploy: 3c0be1594353f9d05b64f744152a920c67fb5463

--- a/publication/dblp-confsigmod-waudby-sps-20/index.html
+++ b/publication/dblp-confsigmod-waudby-sps-20/index.html
@@ -370,6 +370,10 @@ Gábor Szárnyas.
               <a class="hover-ripple" href="https://github.com/ldbc"><i class="fa fa-github"></i></a>
             </li>
             
+            <li class="list-inline-item">
+              <a class="hover-ripple" href="/index.xml"><i class="fa fa-rss"></i></a>
+            </li>
+            
           </ul>
         </div>
         <div class="col-lg-6">
