--- a/publication/dblp-confgrades-szarnyas-pampkeb-18/index.html
+++ b/publication/dblp-confgrades-szarnyas-pampkeb-18/index.html
@@ -382,6 +382,10 @@ János Benjamin Antal.
               <a class="hover-ripple" href="https://github.com/ldbc"><i class="fa fa-github"></i></a>
             </li>
             
+            <li class="list-inline-item">
+              <a class="hover-ripple" href="/index.xml"><i class="fa fa-rss"></i></a>
+            </li>
+            
           </ul>
         </div>
         <div class="col-lg-6">
