--- a/publication/dblp-confsigmod-angles-pdl-13/index.html
+++ b/publication/dblp-confsigmod-angles-pdl-13/index.html
@@ -377,6 +377,10 @@ Josep Lluı́s Larriba-Pey.
               <a class="hover-ripple" href="https://github.com/ldbc"><i class="fa fa-github"></i></a>
             </li>
             
+            <li class="list-inline-item">
+              <a class="hover-ripple" href="/index.xml"><i class="fa fa-rss"></i></a>
+            </li>
+            
           </ul>
         </div>
         <div class="col-lg-6">
