--- a/publication/dblp-journalsercim-angles-pb-14/index.html
+++ b/publication/dblp-journalsercim-angles-pb-14/index.html
@@ -369,6 +369,10 @@ Peter A. Boncz.
               <a class="hover-ripple" href="https://github.com/ldbc"><i class="fa fa-github"></i></a>
             </li>
             
+            <li class="list-inline-item">
+              <a class="hover-ripple" href="/index.xml"><i class="fa fa-rss"></i></a>
+            </li>
+            
           </ul>
         </div>
         <div class="col-lg-6">
