--- a/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/index.html
+++ b/publication/dblp-journalssigmod-angles-blf-0-enmkt-14/index.html
@@ -380,6 +380,10 @@ Ioan Toma.
               <a class="hover-ripple" href="https://github.com/ldbc"><i class="fa fa-github"></i></a>
             </li>
             
+            <li class="list-inline-item">
+              <a class="hover-ripple" href="/index.xml"><i class="fa fa-rss"></i></a>
+            </li>
+            
           </ul>
         </div>
         <div class="col-lg-6">
