deploy: d3ec9a8f95c089cd20ec55ef07180659e8436baf

--- a/event/eigth-tuc-meeting/index.html
+++ b/event/eigth-tuc-meeting/index.html
@@ -311,8 +311,7 @@ Analysis</a>.</p>
 <p>16:45 Juan Sequeda (Capsenta). <a href="attachments/40927235/52428810.pdf">Using graph representation and semantic
 technology to virtually integrate and search multiple diverse data
 sources</a>.</p>
-<p>17:15 Kevin Wilkinson (Hewlett Packard Labs). [<a href="attachments/40927235/52428808.pdf">LDBC SNB
-extensions</a>.]{style=&ldquo;line-height: 1.42857;&quot;}</p>
+<p>17:15 Kevin Wilkinson (Hewlett Packard Labs). <a href="attachments/40927235/52428808.pdf">LDBC SNB extensions</a>.</p>
 <p>17:45 - 18:15 Closing discussion</p>
 <p> </p>
 <h6 id="friday-24th-of-june-2016-room-105"><strong>Friday, 24th of June 2016 (Room 105)</strong></h6>
