--- a/event/fifth-tuc-meeting/index.html
+++ b/event/fifth-tuc-meeting/index.html
@@ -210,11 +210,11 @@ Intelligence  (<a href="attachments/5996808/6979837.pdf">Presentation</a>)</p>
 HP&quot; (<a href="attachments/5996808/6979838.pptx">Presentation</a> )</p>
 <p>12:40 - 13:00 Jakob Nelson,   &quot;graphbench.org on the SNB datagen&quot;</p>
 <p>13:00 - 14:30 Lunch Break@Byzantine &amp; Christian Museum
-(<a href="http://www.byzantinemuseum.gr/en/">link</a>{.external-link})</p>
+(<a href="http://www.byzantinemuseum.gr/en/">link</a>)</p>
 <p>14:30 - 14:50 Olaf Hartig, &quot;Integrating the Property Graph and RDF data
 models&quot; (<a href="attachments/5996808/6979831.pdf">Presentation</a>)<br>
                      
- Documents: <a href="http://arxiv.org/abs/1409.3288">arxiv/1409.3288</a>{.external-link}, <a href="http://arxiv.org/abs/1406.3399">arxiv/1406.3399</a>{.external-link}<br>
+ Documents: <a href="http://arxiv.org/abs/1409.3288">arxiv/1409.3288</a>, <a href="http://arxiv.org/abs/1406.3399">arxiv/1406.3399</a><br>
       </p>
 <p>14:50 - 15:10 Maria-Esther Vidal and Maribel Acosta,<br>
                       &quot;Challenges to be addressed during Benchmarking
@@ -286,7 +286,7 @@ You can also take a taxi from the airport that runs on a fixed price for
 the city center (45 euros). More information on how to move around in
 Athens from the airport can be found here: <a href="http://www.aia.gr/traveler/">http://www.aia.gr/traveler/</a></p>
 <p> </p>
-<h4 id="attachments" class="pageSectionTitle">Attachments:</h4>
+<h3 id="attachments">Attachments</h3>
 <p><img src="images/icons/bullet_blue.gif" alt="">{width=&ldquo;8&rdquo; height=&ldquo;8&rdquo;}
 <a href="attachments/5996808/5964344.gif">nhrf-map.gif</a> (image/gif)<br>
 <img src="images/icons/bullet_blue.gif" alt="">
