--- a/event/fourth-tuc-meeting/index.html
+++ b/event/fourth-tuc-meeting/index.html
@@ -195,9 +195,7 @@ have found in current technology.</li>
 </ul>
 <p>All users of RDF and graph databases are welcome to attend. If you are
 interested, please contact: ldbc AT ac DOT upc DOT edu</p>
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
-<!-- raw HTML omitted -->
+<p><strong>For presenters please limit your talks to just 15 minutes</strong></p>
 <h3 id="agenda">Agenda</h3>
 <p><strong>April 3rd</strong></p>
 <ul>
@@ -369,8 +367,7 @@ Station. For details see</p>
 <!-- raw HTML omitted -->
 <p><a href="http://en.gvb.nl/service_en_verkoop/ov-chipkaartoverzicht/Pages/ov-chipkaart-overzicht.aspx">http://en.gvb.nl/service_en_verkoop/ov-chipkaartoverzicht/Pages/ov-chipkaart-overzicht.aspx</a> or <a href="http://en.gvb.nl/ovinmamsterdam/Pages/bestdeal.aspx">http://en.gvb.nl/ovinmamsterdam/Pages/bestdeal.aspx</a><br>
 and<br>
-[<a href="http://www.iamsterdam.com/en/placestogo/public-transport-gvb-tickets--info-desks/6688b9b9-7dba-4b3e-a01e-e7076c4d7831">http://www.iamsterdam.com/en/placestogo/public-transport-gvb-tickets--info-desks/6688b9b9-7dba-4b3e-a01e-e7076c4d7831</a>]{.Object
-style=&ldquo;color: rgb(0,0,139);&quot;}</p>
+<a href="http://www.iamsterdam.com/en/placestogo/public-transport-gvb-tickets--info-desks/6688b9b9-7dba-4b3e-a01e-e7076c4d7831">http://www.iamsterdam.com/en/placestogo/public-transport-gvb-tickets--info-desks/6688b9b9-7dba-4b3e-a01e-e7076c4d7831</a></p>
 <p><strong>Getting Around:</strong> the fastest way to move in the city of Amsterdam
 generally is by bicycle. Consider renting such a device at your hotel.
 For getting from your hotel to the CWI, you can either take a taxi
@@ -398,7 +395,7 @@ Linneausstraat 63, Amsterdam.]</p>
 attendees that are otherwise unable to fund their trip. Please contact
 us using the following email address if you would like more
 information: ldbcgrants AT ac DOT upc DOT edu</p>
-<h2 id="attachments" class="pageSectionTitle">Attachments:</h2>
+<h3 id="attachments">Attachments</h3>
 <p><img src="images/icons/bullet_blue.gif" alt="">
 <a href="attachments/5538064/5505820.pdf">A5_Map_of_Amsterdam_Science_Park_PDF.pdf</a>
 (application/pdf)<br>
