--- a/event/seventh-tuc-meeting/index.html
+++ b/event/seventh-tuc-meeting/index.html
@@ -317,9 +317,7 @@ may also want to check the routing online.</p>
 Main operator: (914) 945-3000<br>
 Receptionist: (914) 945-1614<br>
 Security: (914) 945-2323</p>
-<p>The meeting will take place in the [[<em>Auditorium</em> on November 9th, and
-in Meeting Room <em>20-043</em> on November
-10th]{style=&ldquo;color: rgb(0,51,102);&quot;}]{.ul}.</p>
+<p>The meeting will take place in the <em>Auditorium</em> on November 9th, and in Meeting Room <em>20-043</em> on November 10th</p>
 <h6 id="maps-and-situation"><strong>Maps and situation</strong></h6>
 <p>You are highly suggested to <strong>rent a car</strong> for your convenience, since
 the public transportation system does not cover this area very well.
@@ -421,8 +419,7 @@ Contact:+1 914 2519700
 <br>
 <a href="http://whiteplains.house.hyatt.com">http://whiteplains.house.hyatt.com</a></p>
 <h3 id="attachments">Attachments:</h3>
-<p>::: {.greybox align=&ldquo;left&rdquo;}
-<img src="images/icons/bullet_blue.gif" alt="">
+<p><img src="images/icons/bullet_blue.gif" alt="">
 <a href="attachments/6882333/15926330.png">Snip20150920_6.png</a> (image/png)</p>
 
         </div>
