deploy: bfdbdb8ea626eeaf69ef5105eed9f3b56ba188c5

--- a/becoming-a-member/index.html
+++ b/becoming-a-member/index.html
@@ -199,13 +199,21 @@
 <li>Right to membership of LDBC task forces. Currently, there are task forces on the Semantic Publishing Benchmark, the Social Network Benchmark Interactive, BI and the Graphalytics workloads, as well as the Graph Query Language task force.</li>
 <li>Access to research resources at academic partners. This includes the ability to look into research agenda&rsquo;s provide feedback and establish working relationships with students, as well as arrange targeted internships with MSc and PhD students provided by these partners.</li>
 </ul>
-<h5 id="access-fillable-membership-form-heredocsldbc_membership_application_renewal_form_2021_incorporating_ldbc_membership_agreement2021-01-14editablepdf">Access <a href="/docs/LDBC_Membership_Application_Renewal_Form_2021_incorporating_LDBC_Membership_Agreement.2021-01-14.editable.pdf">fillable membership form here</a></h5>
-<h5 id="2021-one-year-membership-dues">2021 one-year membership dues</h5>
+<h4 id="2021-annual-membership-dues">2021 annual membership dues</h4>
 <ul>
-<li>Individual Member: EUR 150 (reduced rate: EUR 10)</li>
-<li>Non-Profit Organization Member: EUR 1000</li>
-<li>Company Member: EUR 2000</li>
-<li>Sponsor Company Member: EUR 8000</li>
+<li>Individual Associate member​:​ no subscription fee</li>
+<li>Individual Board member​ ​(standard rate): € 150</li>
+<li>Individual Board member​ (reduced rate for students, etc.): € 10</li>
+<li>Non-commercial institution​: € 1000</li>
+<li>Commercial company​: € 2000</li>
+<li>Sponsor company/institution: € 8000</li>
+</ul>
+<h3 id="forms">Forms</h3>
+<p>Please fill out the form applicable to your employment status and contribution, and email it to the <code>info@ldbcouncil.org</code> address.</p>
+<ul>
+<li><a href="/docs/LDBC.Membership.Application.and.Renewal.Form.2021-01-14">Membership form</a> (both for individuals and organizations)</li>
+<li><a href="/docs/LDBC.Individual.Contributor.License.Agreement.Form-2020-10-23.pdf">Individual contributor license agreement (CLA)</a></li>
+<li><a href="/docs/LDBC.Organization.Contributor.License.Agreement.Form-2020-10-23.pdf">Organization contributor license agreement (CLA)</a></li>
 </ul>
 
         </div>
