deploy: 38d7d8eae003d8e54864626837d3e2aa105134b9

--- a/event/fourth-tuc-meeting/index.html
+++ b/event/fourth-tuc-meeting/index.html
@@ -232,8 +232,8 @@ update</em></li>
 (UPC) <a href="attachments/5538064/5506375.pdf">pdf</a>,
 <a href="https://www.youtube.com/watch?v=4yREJQ3yDr0">video</a>
 <em>Status update on the LDBC Social  Network Benchmark (SNB) task
-forc</em>e.</li>
-<li>[:50 Alexandru Iosup (TU Delft)
+force</em>.</li>
+<li>10:50 Alexandru Iosup (TU Delft)
 <a href="attachments/5538064/5506363.ppt">ppt</a>,
 <a href="https://www.youtube.com/watch?v=ulT-RFwKpOE">video</a>
 <em>Towards Benchmarking Graph-Processing
@@ -253,7 +253,6 @@ protein data analysis.</p>
 </li>
 <li>
 <p>12:10 Davy Suvee (Janssen Pharmaceutica / Johnson &amp; Johnson)
-<a href="attachments/5538064/5506403.crdownload">pdf</a>,
 <a href="https://www.youtube.com/watch?v=XN3LRJUfJIU">video</a>:
 <em>Euretos
 Brain -  Experiences on using a graph database to analyse data
@@ -360,8 +359,8 @@ booking.com quote, breakfast inclusive):</p>
 <h6 id="travel">Travel</h6>
 <p><strong>Arriving &amp; departing:</strong></p>
 <p>Amsterdam has a well-functioning and nearby airport called Schiphol
-(AMS <a href="http://www.schiphol.com%29/">www.schiphol.nl)</a>that
-serves all main European Carriers and also very many low-fare
+(AMS <a href="http://www.schiphol.com%29/">www.schiphol.nl</a>) that
+serves all main European carriers and also very many low-fare
 carriers.</p>
 <p><a href="http://www.iamsterdam.com/en/visiting/touristinformation/gettingaround/arrival-and-departure/arrival-by-plane">http://www.iamsterdam.com/en/visiting/touristinformation/gettingaround/arrival-and-departure/arrival-by-plane</a></p>
 <p><strong>Trains</strong> (~5 per hour) are the most convenient means of transport
@@ -377,13 +376,14 @@ station - any of the metros will do).</p>
 <p><strong>Taxi</strong> is an alternative, though expensive. The price from Schiphol
 will be around EUR45 to the CWI or another point in the city center
 (depending on traffic, the ride is 20-30 minutes).</p>
-<p><strong>Public transportation</strong> (tram,bus,metro) tickets for a single ride and
+<p><strong>Public transportation</strong> (tram, bus, metro) tickets for a single ride and
 1-day (24 hour) passes can be purchased from the driver/conductor on
 trams and busss (cash only) and from vending machines in the metro
 stations.</p>
 <p>Details about the metro, trams and buses, including the <strong>electronic
 ticket system</strong> (&quot;OV-chipcard&quot;) can be found here:</p>
-<p>[<a href="http://www.iamsterdam.com/en/visiting/touristinformation/gettingaround/publictransport">http://www.iamsterdam.com/en/visiting/touristinformation/gettingaround/publictransport</a>  <strong>Only the &quot;disposable&quot; cards are
+<p><a href="http://www.iamsterdam.com/en/visiting/touristinformation/gettingaround/publictransport">http://www.iamsterdam.com/en/visiting/touristinformation/gettingaround/publictransport</a></p>
+<p><strong>Only the &quot;disposable&quot; cards are
 interesting for you as visitor.</strong></p>
 <!-- raw HTML omitted -->
 <p>Multi-day (up to 7-days/168 hours) passes can only be purchased from
@@ -413,8 +413,8 @@ meeting. Then, you'll receive a visitor's pass that allows you to
 enter our building.</p>
 <p><strong>Social Dinner</strong></p>
 <p>The social dinner will take place at 7 pm on April 3 in Restaurant Boom
-([<a href="http://www.boometenendrinken.nl/">boometenendrinken.nl</a>),
-Linneausstraat 63, Amsterdam.]</p>
+(<a href="http://www.boometenendrinken.nl/">boometenendrinken.nl</a>),
+Linneausstraat 63, Amsterdam.</p>
 <p><strong>Travel costs</strong></p>
 <p>There is some small budget available that can be used to assist some
 attendees that are otherwise unable to fund their trip. Please contact
@@ -482,10 +482,7 @@ LDBC CWI 2014-04-03.pptx</a>
 LDBC Heritage &amp; Location.pptx</a>
 (application/vnd.openxmlformats-officedocument.presentationml.presentation)<br>
 <img src="images/icons/bullet_blue.gif" alt="">{width=&ldquo;8&rdquo; height=&ldquo;8&rdquo;} <a href="attachments/5538064/5506381.pdf">LDBC meeting
-amsterdam.pdf</a> (application/pdf)<br>
-<img src="images/icons/bullet_blue.gif" alt="">
-<a href="attachments/5538064/5506403.crdownload">LDBC_Euretos.pdf.crdownload</a>
-(application/octet-stream)\</p>
+amsterdam.pdf</a> (application/pdf)\</p>
 
         </div>
         <!-- tags -->
