--- a/event/second-tuc-meeting/index.html
+++ b/event/second-tuc-meeting/index.html
@@ -344,13 +344,13 @@ the Bus 690, which stops at Boltzmannstraße.</li>
 Then change to U-bahn U6 line towards Garching-Forschungszentrum,
 exit at the last station. Take the south exit to MI-Building and
 LRZ.</li>
-<li>Taxi: fare is ca,30-40 euros.</li>
+<li>Taxi: fare is ca. 30-40 euros.</li>
 </ol>
 <p>For cases 1 and 2, before the trip get the One-day Munich Airport ticket
 and validate it. It will cover all public transportation for that day.</p>
 <h5 id="getting-to-the-tum-campus-from-garching-u-bahn">Getting to the TUM Campus from Garching: U-Bahn</h5>
 <p>The city of Garching is located on the U6 line, one stop before the
-Garching-Forschungszentrum**.** In order to get from Garching to
+Garching-Forschungszentrum. In order to get from Garching to
 Garching-Forschungszentrum with the U-bahn, a special one-way ticket
 called Kurzstrecke (1.30 euros) can be purchased.</p>
 <p><strong>Finding LRZ@TUM</strong></p>
