--- a/event/fourth-tuc-meeting/index.html
+++ b/event/fourth-tuc-meeting/index.html
@@ -246,7 +246,7 @@ College) <a href="attachments/5538064/5506364.pptx">pptx</a>,
 <ul>
 <li>
 <p>11:50 Thilo Muth (University of
-Magdeburg) <a href="attachments/5538064/5506369.pptx">pptx</a><strong>,</strong>
+Magdeburg) <a href="attachments/5538064/5506369.pptx">pptx</a>,
 <a href="https://www.youtube.com/watch?v=5xH3UDLP6Oc">video</a> MetaProteomeAnalyzer:
 a graph database backed software for functional and taxonomic
 protein data analysis.</p>
@@ -261,7 +261,7 @@ graph</em></p>
 </li>
 <li>
 <p>12:30 Yongming Luo (TU Eindhoven)
-<a href="attachments/5538064/5506366.pdf">pdf</a><em>,</em>
+<a href="attachments/5538064/5506366.pdf">pdf</a>,
 <a href="https://www.youtube.com/watch?v=g_my3tBB2_s">video</a>}:
 <em>Regularities and dynamics in bisimulation reductions of big
 graphs</em></p>
