--- a/event/thirteenth-tuc-meeting/index.html
+++ b/event/thirteenth-tuc-meeting/index.html
@@ -201,25 +201,32 @@
         </h5>
         <h5>
           
-          Event dates: 30 Jun 2020 09:00 -- 01 Jul 2020 17:00  (local timezone)
+          Event dates: 30 Jun 2020 14:00 -- 01 Jul 2020 17:00  (local timezone)
           
         </h5>
         <div class="content">
           <p>LDBC is pleased to announce its Twelfth Technical User Community (TUC) meeting.</p>
 <p>LDBC Technical User Community meetings serve to (1) learn about progress in the LDBC task forces on graph benchmarks and graph standards, (2) to give feedback on these, and (3) hear about user experiences with graph data management technologies or (4) learn about new graph technologies from researchers or industry – LDBC counts Oracle, IBM, Intel, Neo4j, TigerGraph and Huawei among its members.</p>
-<p>This TUC meeting will be a two-day event hosted online. We welcome all users of RDF and Graph technologies to attend. If you are interested to attend the event, please, contact Gabor Szarnyas (BME) at szarnyasg AT gmail to register.</p>
+<p>This TUC meeting will be a two-day event hosted online. We welcome all users of RDF and Graph technologies to attend. If you are interested to attend the event, please, contact Gabor Szarnyas (BME) to register.</p>
 <h3 id="snb-task-force">SNB Task Force</h3>
-<pre><code>Progress report
-    ACID compliance test suite
-    Integrating deletions to Datagen
-    Migrating Datagen to Spark
-    Redesign of BI read queries
-    Extensions to the driver 
-Ongoing work
-    Datagen: tuning the distribution of deletes
-    Interactive 2.0 workload
-    BI 1.0 workload
-</code></pre>
+<ul>
+<li>Progress report
+<ul>
+<li>ACID compliance test suite</li>
+<li>Integrating deletions to Datagen</li>
+<li>Migrating Datagen to Spark</li>
+<li>Redesign of BI read queries</li>
+<li>Extensions to the driver</li>
+</ul>
+</li>
+<li>Ongoing work
+<ul>
+<li>Datagen: tuning the distribution of deletes</li>
+<li>Interactive 2.0 workload</li>
+<li>BI 1.0 workload</li>
+</ul>
+</li>
+</ul>
 <p>Zoom links will be sent through email.</p>
 
         </div>
