--- a/introduction/index.html
+++ b/introduction/index.html
@@ -192,7 +192,14 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="content">
-          <p>This is just a page stub.</p>
+          <p>The Linked Data Benchmark Council (LDBC) is a non-profit organization aiming to define standard graph benchmarks to foster a community around graph processing technologies. LDBC consists of members from both industry and academia, including <a href="/organizational-members">organizations</a> and individuals.</p>
+<h4 id="contact">Contact</h4>
+<p>To learn more about LDBC, reach out at <code>info@ldbcouncil.org</code>.</p>
+<p>Address:</p>
+<p>First Floor, Two Chamberlain Square<br>
+Birmingham<br>
+B3 3AX<br>
+United Kingdom</p>
 
         </div>
       </div>
