deploy: fb87f55366d065fff8e3aac13163a144812b0f7d

--- a/becoming-a-member/index.html
+++ b/becoming-a-member/index.html
@@ -211,7 +211,7 @@
 <h3 id="forms">Forms</h3>
 <p>Please fill out the form applicable to your employment status and contribution, and email it to the <code>info@ldbcouncil.org</code> address.</p>
 <ul>
-<li><a href="/docs/LDBC.Membership.Application.and.Renewal.Form.2021-01-14">Membership form</a> (both for individuals and organizations)</li>
+<li><a href="/docs/LDBC.Membership.Application.and.Renewal.Form.2021-01-14.pdf">Membership form</a> (both for individuals and organizations)</li>
 <li><a href="/docs/LDBC.Individual.Contributor.License.Agreement.Form-2020-10-23.pdf">Individual contributor license agreement (CLA)</a></li>
 <li><a href="/docs/LDBC.Organization.Contributor.License.Agreement.Form-2020-10-23.pdf">Organization contributor license agreement (CLA)</a></li>
 </ul>
