deploy: 32f956c825edd02b53f9ce0b52ac68d684827bdd

--- a/organizational-members/index.html
+++ b/organizational-members/index.html
@@ -213,7 +213,7 @@
         
           <div class="col-lg-6 px-0 div-wrapper d-flex justify-content-center align-items-center">
           <a href="https://www.oracle.com/" >
-            <img src="https://ldbcouncil.org/images/members/oracle-labs.jpg" alt="Oracle Labs" loading="lazy" class="img-fluid company-logo" >
+            <img src="https://ldbcouncil.org/images/members/oracle-labs.png" alt="Oracle Labs" loading="lazy" class="img-fluid company-logo" >
           </a>
           </div>
         
