deploy: d1c08b3d41bf1d9c683430ee4880bae94755179b

--- a/becoming-a-member/index.html
+++ b/becoming-a-member/index.html
@@ -215,6 +215,11 @@
 <li><a href="/docs/LDBC.Individual.Contributor.License.Agreement.Form-2020-10-23.pdf">Individual contributor license agreement (CLA)</a></li>
 <li><a href="/docs/LDBC.Organization.Contributor.License.Agreement.Form-2020-10-23.pdf">Organization contributor license agreement (CLA)</a></li>
 </ul>
+<h3 id="related-documents">Related documents</h3>
+<ul>
+<li><a href="/docs/LDBC.Articles.of.Association.ADOPTED.2021-01-14.pdf">Articles of association</a></li>
+<li><a href="/docs/LDBC.Byelaws.1.3.ADOPTED.2021-01-14.pdf">Byelaws</a></li>
+</ul>
 
         </div>
       </div>
