--- a/index.html
+++ b/index.html
@@ -267,8 +267,29 @@
           <h4 class="mt-0">Fourteenth TUC Meeting</h4>
         </a>
         17 Jun 2021
-        <p>Details to be announced in early July.</p>
-
+        <h3 id="16001725-cest-ldbc-updates-benchmarks-query-languages">[16:00–17:25 CEST] LDBC updates, benchmarks, query languages</h3>
+<table>
+<thead>
+<tr>
+<th>start</th>
+<th>speaker</th>
+<th>title</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>16:00</td>
+<td>Peter Boncz (CWI)</td>
+<td>State of the union</td>
+</tr>
+<tr>
+<td>16:05</td>
+<td>Gábor Szárnyas (CWI)</td>
+<td>Overview of LDBC benchmarks</td>
+</tr>
+<tr>
+<td>16:12</td>
+<td>Mingxi Wu …</td></tr></tbody></table>
       </div>
       
       
