--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -201,16 +201,20 @@
         </h5>
         <h5>
           
-          Event dates: 26 Jun 2021 13:23 -- 26 Jun 2021 13:23  (local timezone)
+          Event dates: 16 Aug 2021 16:00 -- 16 Aug 2021 20:00  (local timezone)
           
         </h5>
         <div class="content">
-          <h3 id="16001725-cest-ldbc-updates-benchmarks-query-languages">[16:00–17:25 CEST] LDBC updates, benchmarks, query languages</h3>
+          <p>LDBC is hosting a one-day hybrid workshop, co-located with <a href="https://vldb.org/2021/">VLDB 2021</a> on <strong>August 16 (Monday) between 16:00–20:00 CEST</strong>.</p>
+<p>The physical part of the workshop will be held in room Akvariet 2 of the <a href="https://www.tivolihotel.com/">Tivoli Hotel</a> (Copenhagen), while the virtual part will be hosted on Zoom (stay tuned for the link).</p>
+<p>Our programme consists of talks that provide an overview of LDBC&rsquo;s recent efforts. Moreover, we have invited industry practitioners and academic researchers to present their latest results.</p>
+<p>Most talks are scheduled to be 10 minutes with a short Q&amp;A session. We are going to have three sessions. Their preliminary schedules are shown below.</p>
+<h4 id="16001725-cest-ldbc-updates-benchmarks-query-languages">[16:00–17:25 CEST] LDBC updates, benchmarks, query languages</h4>
 <table>
 <thead>
 <tr>
 <th>start</th>
-<th>speaker</th>
+<th>speaker(s)</th>
 <th>title</th>
 </tr>
 </thead>
@@ -228,12 +232,12 @@
 <tr>
 <td>16:12</td>
 <td>Mingxi Wu (TigerGraph)</td>
-<td>SNB benchmark results with TigerGraph</td>
+<td>LDBC Social Network Benchmark results with TigerGraph</td>
 </tr>
 <tr>
 <td>16:24</td>
 <td>Xiaowei Zhu (Ant Group)</td>
-<td>Financial Benchmark overview</td>
+<td>Financial Benchmark proposal</td>
 </tr>
 <tr>
 <td>16:36</td>
@@ -258,7 +262,7 @@
 </tbody>
 </table>
 <p><em>coffee break (10 minutes)</em></p>
-<h3 id="17351845-cest-systems-and-data-structures">[17:35–18:45 CEST] Systems and data structures</h3>
+<h4 id="17351845-cest-systems-and-data-structures">[17:35–18:45 CEST] Systems and data structures</h4>
 <table>
 <thead>
 <tr>
@@ -291,17 +295,17 @@
 <tr>
 <td>18:23</td>
 <td>Semyon Grigorev (Saint Petersburg University)</td>
-<td>Context-free path querying: obstacles on the way to adoption</td>
+<td>Context-free path querying: Obstacles on the way to adoption</td>
 </tr>
 <tr>
 <td>18:35</td>
 <td>Per Fuchs (Technical University of Munich)</td>
-<td>Sortledton: a universal, transactional graph data structure</td>
+<td>Sortledton: A universal, transactional graph data structure</td>
 </tr>
 </tbody>
 </table>
 <p><em>coffee break (10 minutes)</em></p>
-<h3 id="1855-2000-cest-high-level-approaches-and-benchmarks">[18:55-20:00 CEST] High-level approaches and benchmarks</h3>
+<h4 id="1855-2000-cest-high-level-approaches-and-benchmarks">[18:55-20:00 CEST] High-level approaches and benchmarks</h4>
 <table>
 <thead>
 <tr>
