--- a/index.html
+++ b/index.html
@@ -267,29 +267,8 @@
           <h4 class="mt-0">Fourteenth TUC Meeting</h4>
         </a>
         17 Jun 2021
-        <h3 id="16001725-cest-ldbc-updates-benchmarks-query-languages">[16:00–17:25 CEST] LDBC updates, benchmarks, query languages</h3>
-<table>
-<thead>
-<tr>
-<th>start</th>
-<th>speaker</th>
-<th>title</th>
-</tr>
-</thead>
-<tbody>
-<tr>
-<td>16:00</td>
-<td>Peter Boncz (CWI)</td>
-<td>State of the union</td>
-</tr>
-<tr>
-<td>16:05</td>
-<td>Gábor Szárnyas (CWI)</td>
-<td>Overview of LDBC benchmarks</td>
-</tr>
-<tr>
-<td>16:12</td>
-<td>Mingxi Wu …</td></tr></tbody></table>
+        <p>LDBC is hosting a one-day hybrid workshop, co-located with <a href="https://vldb.org/2021/">VLDB 2021</a> on <strong>August 16 (Monday) between 16:00–20:00 CEST</strong>.</p>
+<p>The physical part of the workshop will be held in room Akvariet 2 of the <a href="https://www.tivolihotel.com/">Tivoli Hotel …</a></p>
       </div>
       
       
