deploy: 04ea8511acb7804dac5f6c42726b8f239db75f8a

--- a/organizational-members/index.html
+++ b/organizational-members/index.html
@@ -237,7 +237,7 @@
         
       <div class="section-title-border"></div>
       <!-- Member companies -->
-      <h3 class="section-title">Companies (in alphabetical order):</h3>
+      <h3 class="section-title">Companies:</h3>
         <div class="row row-eq-height">      
         
           <div class="col-lg-4 px-0 div-wrapper d-flex justify-content-center align-items-center">
