deploy: 25d08d4ee229e803a1468c9d171312221adb28ec

--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -214,7 +214,7 @@
 <thead>
 <tr>
 <th>start</th>
-<th>speaker(s)</th>
+<th>speaker</th>
 <th>title</th>
 </tr>
 </thead>
@@ -246,7 +246,7 @@
 </tr>
 <tr>
 <td>16:48</td>
-<td>Juan Sequeda (data.world), Jan Hidders (Birkbeck)</td>
+<td>Jan Hidders (Birkbeck)</td>
 <td>Status report from the Property Graph Schema Working Group (PGSWG)</td>
 </tr>
 <tr>
