deploy: e9ec46dfea340ba159c7da0ce92c61ceece5ffa5

--- a/event/index.html
+++ b/event/index.html
@@ -206,8 +206,12 @@
   <div class="position-relative mb-4 overflow-hidden">
     
         <p>LDBC is hosting a one-day hybrid workshop, co-located with <a href="https://vldb.org/2021/">VLDB 2021</a> on <strong>August 16 (Monday) between 16:00–20:00 CEST</strong>.</p>
-<p>The physical part of the workshop will be held in room Akvariet 2 of the <a href="https://www.tivolihotel.com/">Tivoli Hotel</a> (Copenhagen), while the virtual part will be hosted on Zoom (stay tuned for the link).</p>
-<p>Our programme consists of talks that provide an overview of LDBC&rsquo;s recent efforts. Moreover, we have invited industry practitioners and academic …</p>
+<p>The physical part of the workshop will be held in room Akvariet 2 of the <a href="https://www.tivolihotel.com/">Tivoli Hotel</a> (Copenhagen), while the virtual part will be hosted on Zoom.</p>
+<ul>
+<li>Zoom link: <a href="https://us02web.zoom.us/j/89039091641">https://us02web.zoom.us/j/89039091641</a></li>
+<li>Passcode: <code>ldbcouncil</code></li>
+</ul>
+<p>Our programme consists of talks that provide an overview of LDBC&rsquo;s recent efforts. Moreover, we have invited …</p>
     
   </div>
 </div>
