--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -206,7 +206,11 @@
         </h5>
         <div class="content">
           <p>LDBC is hosting a one-day hybrid workshop, co-located with <a href="https://vldb.org/2021/">VLDB 2021</a> on <strong>August 16 (Monday) between 16:00–20:00 CEST</strong>.</p>
-<p>The physical part of the workshop will be held in room Akvariet 2 of the <a href="https://www.tivolihotel.com/">Tivoli Hotel</a> (Copenhagen), while the virtual part will be hosted on Zoom (stay tuned for the link).</p>
+<p>The physical part of the workshop will be held in room Akvariet 2 of the <a href="https://www.tivolihotel.com/">Tivoli Hotel</a> (Copenhagen), while the virtual part will be hosted on Zoom.</p>
+<ul>
+<li>Zoom link: <a href="https://us02web.zoom.us/j/89039091641">https://us02web.zoom.us/j/89039091641</a></li>
+<li>Passcode: <code>ldbcouncil</code></li>
+</ul>
 <p>Our programme consists of talks that provide an overview of LDBC&rsquo;s recent efforts. Moreover, we have invited industry practitioners and academic researchers to present their latest results.</p>
 <p>Most talks are scheduled to be 10 minutes with a short Q&amp;A session. We are going to have three sessions. Their preliminary schedules are shown below.</p>
 <h4 id="16001725-cest-ldbc-updates-benchmarks-query-languages">[16:00–17:25 CEST] LDBC updates, benchmarks, query languages</h4>
