deploy: e6b3fb86f66f733bb3809e6bbb63f8d374515ecb

--- a/event/index.html
+++ b/event/index.html
@@ -230,7 +230,7 @@
   </div>
   <div class="position-relative mb-4 overflow-hidden">
     
-        <p>LDBC is pleased to announce its Twelfth Technical User Community (TUC) meeting.</p>
+        <p>LDBC is pleased to announce its Thirteenth Technical User Community (TUC) meeting.</p>
 <p>LDBC Technical User Community meetings serve to (1) learn about progress in the LDBC task forces on graph benchmarks and graph standards, (2) to give feedback on these, and (3) hear about user experiences with graph data management technologies or (4) learn about new graph technologies from researchers or industry – LDBC counts Oracle, IBM, Intel, Neo4j, TigerGraph …</p>
     
   </div>
