--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
           <h4 class="mt-0">Thirteenth TUC Meeting</h4>
         </a>
         26 Jun 2020
-        <p>LDBC is pleased to announce its Twelfth Technical User Community (TUC) meeting.</p>
+        <p>LDBC is pleased to announce its Thirteenth Technical User Community (TUC) meeting.</p>
 <p>LDBC Technical User Community meetings serve to (1) learn about progress in the LDBC task forces on graph benchmarks and graph …</p>
       </div>
       
