--- a/event/thirteenth-tuc-meeting/index.html
+++ b/event/thirteenth-tuc-meeting/index.html
@@ -205,7 +205,7 @@
           
         </h5>
         <div class="content">
-          <p>LDBC is pleased to announce its Twelfth Technical User Community (TUC) meeting.</p>
+          <p>LDBC is pleased to announce its Thirteenth Technical User Community (TUC) meeting.</p>
 <p>LDBC Technical User Community meetings serve to (1) learn about progress in the LDBC task forces on graph benchmarks and graph standards, (2) to give feedback on these, and (3) hear about user experiences with graph data management technologies or (4) learn about new graph technologies from researchers or industry – LDBC counts Oracle, IBM, Intel, Neo4j, TigerGraph and Huawei among its members.</p>
 <p>This TUC meeting will be a two-day event hosted online. We welcome all users of RDF and Graph technologies to attend. If you are interested to attend the event, please, contact Gabor Szarnyas (BME) to register.</p>
 <h3 id="snb-task-force">SNB Task Force</h3>
