--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
           <h4 class="mt-0">Fourteenth TUC Meeting</h4>
         </a>
         17 Jun 2021
-        <p>LDBC is hosting a one-day hybrid workshop, co-located with <a href="https://vldb.org/2021/">VLDB 2021</a> on <strong>August 16 (Monday) between 16:00–20:00 CEST</strong>.</p>
-<p>The physical part of the workshop will be held in room Akvariet 2 of the <a href="https://www.tivolihotel.com/">Tivoli Hotel …</a></p>
+        <p>LDBC was hosting a one-day hybrid workshop, co-located with <a href="https://vldb.org/2021/">VLDB 2021</a> on <strong>August 16 (Monday) between 16:00–20:00 CEST</strong>.</p>
+<p>The physical part of the workshop was held in room Akvariet 2 of the <a href="https://www.tivolihotel.com/">Tivoli Hotel …</a></p>
       </div>
       
       
