--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -221,42 +221,42 @@
 <tr>
 <td>16:00</td>
 <td>Peter Boncz (CWI)</td>
-<td>State of the union</td>
+<td>State of the union – <a href="attachments/peter-boncz-state-of-the-union.pdf">slides</a></td>
 </tr>
 <tr>
 <td>16:05</td>
 <td>Gábor Szárnyas (CWI)</td>
-<td>Overview of LDBC benchmarks</td>
+<td>Overview of LDBC benchmarks – <a href="attachments/gabor-szarnyas-ldbc-benchmarks.pdf">slides</a></td>
 </tr>
 <tr>
 <td>16:12</td>
 <td>Mingxi Wu (TigerGraph)</td>
-<td>LDBC Social Network Benchmark results with TigerGraph</td>
+<td>LDBC Social Network Benchmark results with TigerGraph – <a href="attachments/mingxi-wu-tigergraph-snb-preliminary-results.pdf">slides</a></td>
 </tr>
 <tr>
 <td>16:24</td>
 <td>Xiaowei Zhu (Ant Group)</td>
-<td>Financial Benchmark proposal</td>
+<td>Financial Benchmark proposal – <a href="attachments/xiaowei-zhu-financial-benchmark.pdf">slides</a></td>
 </tr>
 <tr>
 <td>16:36</td>
 <td>Petra Selmer (Neo4j)</td>
-<td>Status report from the Existing Languages Working Group (ELWG)</td>
+<td>Status report from the Existing Languages Working Group (ELWG) – <a href="attachments/petra-selmer-elwg.pdf">slides</a></td>
 </tr>
 <tr>
 <td>16:48</td>
 <td>Jan Hidders (Birkbeck)</td>
-<td>Status report from the Property Graph Schema Working Group (PGSWG)</td>
+<td>Status report from the Property Graph Schema Working Group (PGSWG) – <a href="attachments/jan-hidders-pgswg.pdf">slides</a></td>
 </tr>
 <tr>
 <td>17:00</td>
 <td>Keith Hare (JCC Consulting)</td>
-<td>Database Language Standards Structure and Process, SQL/PGQ</td>
+<td>Database Language Standards Structure and Process, SQL/PGQ – <a href="attachments/.pdf">slides</a></td>
 </tr>
 <tr>
 <td>17:12</td>
 <td>Stefan Plantikow (GQL Editor)</td>
-<td>Report on the GQL standard</td>
+<td>Report on the GQL standard – <a href="attachments/stefan-plantikow-gql.pdf">slides</a></td>
 </tr>
 </tbody>
 </table>
@@ -274,32 +274,32 @@
 <tr>
 <td>17:35</td>
 <td>Vasileios Trigonakis (Oracle Labs)</td>
-<td>PGX.D aDFS: An Almost Depth-First-Search Distributed Graph-Querying System</td>
+<td>PGX.D aDFS: An Almost Depth-First-Search Distributed Graph-Querying System  – <a href="attachments/.pdf">slides</a></td>
 </tr>
 <tr>
 <td>17:47</td>
 <td>Matthias Hauck (SAP)</td>
-<td>JSON, Spatial, Graph – Multi-model Workloads with SAP HANA Cloud</td>
+<td>JSON, Spatial, Graph – Multi-model Workloads with SAP HANA Cloud  – <a href="attachments/.pdf">slides</a></td>
 </tr>
 <tr>
 <td>17:59</td>
 <td>Nikolay Yakovets (Eindhoven University of Technology)</td>
-<td>AvantGraph</td>
+<td>AvantGraph  – <a href="attachments/.pdf">slides</a></td>
 </tr>
 <tr>
 <td>18:11</td>
 <td>Semih Salihoglu (University of Waterloo)</td>
-<td>GRainDB: Making RDBMSs Efficient on Graph Workloads Through Predefined Joins</td>
+<td>GRainDB: Making RDBMSs Efficient on Graph Workloads Through Predefined Joins  – <a href="attachments/semih-salihoglu-graindb.pdf">slides</a></td>
 </tr>
 <tr>
 <td>18:23</td>
 <td>Semyon Grigorev (Saint Petersburg University)</td>
-<td>Context-free path querying: Obstacles on the way to adoption</td>
+<td>Context-free path querying: Obstacles on the way to adoption  – <a href="attachments/semyon-grigorev-cfpq.pdf">slides</a></td>
 </tr>
 <tr>
 <td>18:35</td>
 <td>Per Fuchs (Technical University of Munich)</td>
-<td>Sortledton: A universal, transactional graph data structure</td>
+<td>Sortledton: A universal, transactional graph data structure  – <a href="attachments/per-fuchs-sortledton.pdf">slides</a></td>
 </tr>
 </tbody>
 </table>
@@ -317,27 +317,27 @@
 <tr>
 <td>18:55</td>
 <td>Angelos-Christos Anadiotis (Ecole Polytechnique and Institut Polytechnique de Paris)</td>
-<td>Empowering Investigative Journalism with Graph-based Heterogeneous Data Management</td>
+<td>Empowering Investigative Journalism with Graph-based Heterogeneous Data Management – <a href="attachments/angelos-christos-anadiotis-investigative-journalism-graph-data-management.pdf">slides</a></td>
 </tr>
 <tr>
 <td>19:07</td>
 <td>Vasia Kalavri (Boston University)</td>
-<td>Learning to partition unbounded graph streams</td>
+<td>Learning to partition unbounded graph streams – <a href="attachments/.pdf">slides</a></td>
 </tr>
 <tr>
 <td>19:19</td>
 <td>Muhammad Attahir Jibril (TU Ilmenau)</td>
-<td>Towards a Hybrid OLTP-OLAP Graph Benchmark</td>
+<td>Towards a Hybrid OLTP-OLAP Graph Benchmark – <a href="attachments/.pdf">slides</a></td>
 </tr>
 <tr>
 <td>19:31</td>
 <td>Riccardo Tommasini (University of Tartu)</td>
-<td>An outlook on Benchmarks for Graph Stream Processing</td>
+<td>An outlook on Benchmarks for Graph Stream Processing – <a href="attachments/riccardo-tommasini-graph-stream-processing-benchmarks.pdf">slides</a></td>
 </tr>
 <tr>
 <td>19:43</td>
 <td>Mohamed Ragab (University of Tartu)</td>
-<td>Benchranking: Towards prescriptive analysis of big graph processing: the case of SparkSQL</td>
+<td>Benchranking: Towards prescriptive analysis of big graph processing: the case of SparkSQL – <a href="attachments/.pdf">slides</a></td>
 </tr>
 </tbody>
 </table>
