--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -274,7 +274,7 @@
 <tr>
 <td>17:35</td>
 <td>Vasileios Trigonakis (Oracle Labs)</td>
-<td>PGX.D aDFS: An Almost Depth-First-Search Distributed Graph-Querying System  – <a href="attachments/.pdf">slides</a></td>
+<td>PGX.D aDFS: An Almost Depth-First-Search Distributed Graph-Querying System  – <a href="attachments/vasileios-trigonakis-pgxd-adfs.pdf">slides</a></td>
 </tr>
 <tr>
 <td>17:47</td>
@@ -327,7 +327,7 @@
 <tr>
 <td>19:19</td>
 <td>Muhammad Attahir Jibril (TU Ilmenau)</td>
-<td>Towards a Hybrid OLTP-OLAP Graph Benchmark – <a href="attachments/.pdf">slides</a></td>
+<td>Towards a Hybrid OLTP-OLAP Graph Benchmark – <a href="attachments/muhammad-attahir-jibril-hybrid-oltp-olap-benchmark.pdf">slides</a></td>
 </tr>
 <tr>
 <td>19:31</td>
@@ -337,7 +337,7 @@
 <tr>
 <td>19:43</td>
 <td>Mohamed Ragab (University of Tartu)</td>
-<td>Benchranking: Towards prescriptive analysis of big graph processing: the case of SparkSQL – <a href="attachments/.pdf">slides</a></td>
+<td>Benchranking: Towards prescriptive analysis of big graph processing: the case of SparkSQL – <a href="attachments/mohamed-ragab-benchranking.pdf">slides</a></td>
 </tr>
 </tbody>
 </table>
