--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -279,12 +279,12 @@
 <tr>
 <td>17:47</td>
 <td>Matthias Hauck (SAP)</td>
-<td>JSON, Spatial, Graph – Multi-model Workloads with SAP HANA Cloud  – <a href="attachments/.pdf">slides</a></td>
+<td>JSON, Spatial, Graph – Multi-model Workloads with SAP HANA Cloud  – <a href="attachments/matthias-hauck-json-spatial-graph-sap-hana-cloud.pdf">slides</a></td>
 </tr>
 <tr>
 <td>17:59</td>
 <td>Nikolay Yakovets (Eindhoven University of Technology)</td>
-<td>AvantGraph  – <a href="attachments/.pdf">slides</a></td>
+<td>AvantGraph  – <a href="attachments/nikolay-yakovets-avantgraph.pdf">slides</a></td>
 </tr>
 <tr>
 <td>18:11</td>
