deploy: b729270b28e711a403b8cc304bc88e3fdea281e8

--- a/event/fourteenth-tuc-meeting/index.html
+++ b/event/fourteenth-tuc-meeting/index.html
@@ -251,7 +251,7 @@
 <tr>
 <td>17:00</td>
 <td>Keith Hare (JCC Consulting)</td>
-<td>Database Language Standards Structure and Process, SQL/PGQ – <a href="attachments/.pdf">slides</a></td>
+<td>Database Language Standards Structure and Process, SQL/PGQ – <a href="attachments/keith-hare-database-language-standards-structure-and-process-sql-pgq.pdf">slides</a></td>
 </tr>
 <tr>
 <td>17:12</td>
@@ -322,7 +322,7 @@
 <tr>
 <td>19:07</td>
 <td>Vasia Kalavri (Boston University)</td>
-<td>Learning to partition unbounded graph streams – <a href="attachments/.pdf">slides</a></td>
+<td>Learning to partition unbounded graph streams – <a href="attachments/vasia-kalavri-learning-to-partition-unbounded-graph-streams.pdf">slides</a></td>
 </tr>
 <tr>
 <td>19:19</td>
