deploy: c42c2c89e71938ff9a05f596b6fbe4b20a13e613

--- a/organizational-members/index.html
+++ b/organizational-members/index.html
@@ -275,7 +275,7 @@
           </div>
         
           <div class="col-lg-4 px-0 div-wrapper d-flex justify-content-center align-items-center">
-          <a href="https://www.jcc.com" >
+          <a href="http://www.jcc.com" >
             <img src="https://ldbcouncil.org/images/members/jcc.png" alt="JCC Consulting Inc." loading="lazy" class="img-fluid company-logo" >
           </a>
           </div>
